Unit testing and code cleanup for the splitter code